--- a/12_ssh_telnet/devices3.yaml
+++ b/12_ssh_telnet/devices3.yaml
@@ -1,5 +1,5 @@
 routers:
-  device_type: cisco_ios
+- device_type: cisco_ios
   ip: 192.168.102.226
-  username: admin
-  password: 12345As  
+- device_type: cisco_ios
+  ip: 10.168.102.2
