fix bug with name

--- a/12_ssh_telnet/devices.yaml
+++ b/12_ssh_telnet/devices.yaml
@@ -1,5 +1,10 @@
 routers:
 - device_type: cisco_ios
+  ip: 192.168.102.71
+  username: admin
+  password: 12345As
+  secret: cisco
+- device_type: cisco_ios
   ip: 192.168.100.1
   username: cisco
   password: cisco
